--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -29,11 +29,14 @@
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         <% @working_team.agendas.each do |agenda| %>
+          
           <li class="nav-item has-treeview menu-open">
+            
             <a href="#" class="nav-link">
               <i class="fa fa-circle-o nav-icon"></i>
               <p>
-                <%= agenda.title %>
+                
+                <%= agenda.title %><object form = "id"><%= link_to "削除", agenda_path(agenda.id),method: :delete, data: {confirm: "本当に削除してもいいですか？"} %></object>
                 <i class="right fa fa-angle-left"></i>
               </p>
             </a>
