--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -38,10 +38,14 @@
               <table class="table">
                 <tbody>
                   <% @team.assigns.each do |assign| %>
+                  <%# binding.pry%>
                     <tr>
                       <td><%= image_tag 'default.jpg', size: '40x40' %></td>
                       <td><%= assign.user.email %></td>
                       <td><%= link_to I18n.t('views.button.delete'), team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
+                      <% if current_user.id == @team.owner.id%>
+                        <td><%= link_to "管理者を譲渡",change_admin_team_path(owner_id: assign.user_id), method: :post%></td>
+                      <% end %>
                     </tr>
                   <% end %>
                 </tbody>
